# polos

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md
create-polos-py/: pyproject.toml
create-polos-py/src/create_polos/: cli.py  providers.py  scaffold.py
create-polos-py/src/create_polos/templates/: assistant_agent.py  coding_agent.py  env_example.py  gitignore.py  main_py.py  pyproject_toml.py  readme.py  text_review_agents.py  text_review_init.py  text_review_workflow.py
create-polos-ts/: package-lock.json  package.json  tsconfig.json
docs/: CNAME  README.md  index.html  install.sh
install/: README.md  (+1 more)
orchestrator/: .clippy.toml  .rustfmt.toml  Cargo.toml
orchestrator/.cargo/: config.toml
orchestrator/migrations/: 0001_initial_schema.sql  0002_add_queue_name_to_event_triggers.sql  0003_add_session_memory.sql  0004_add_channel_context_and_slack_apps.sql
orchestrator/src/: crypto.rs  lib.rs  main.rs
orchestrator/src/api/: common.rs  health.rs  mod.rs
orchestrator/src/api/agents/: handlers.rs
orchestrator/src/api/api_keys/: handlers.rs
orchestrator/src/api/approvals/: handlers.rs
orchestrator/src/api/auth/: handlers.rs  helpers.rs  middleware.rs  mod.rs
orchestrator/src/api/deployments/: handlers.rs
orchestrator/src/api/events/: handlers.rs
orchestrator/src/api/executions/: handlers.rs
orchestrator/src/api/projects/: handlers.rs
orchestrator/src/api/schedules/: handlers.rs
orchestrator/src/api/sessions/: handlers.rs
orchestrator/src/api/slack/: handlers.rs  mod.rs
orchestrator/src/api/state/: handlers.rs
orchestrator/src/api/tools/: handlers.rs
orchestrator/src/api/traces/: handlers.rs
orchestrator/src/api/workers/: handlers.rs
orchestrator/src/api/workflows/: handlers.rs
orchestrator/src/db/: agents.rs  api_keys.rs  common.rs  deployments.rs  events.rs  executions.rs  mod.rs  models.rs  projects.rs  schedules.rs  sessions.rs  state.rs  step_outputs.rs  tools.rs  traces.rs  users.rs  wait.rs  workers.rs  workflows.rs
orchestrator/tests/: README.md  common.rs  lib.rs
orchestrator/tests/db/: events_test.rs  executions_test.rs  mod.rs  projects_test.rs  schedules_test.rs  state_test.rs  step_outputs_test.rs  tools_test.rs  traces_test.rs  users_test.rs  wait_test.rs  workers_test.rs  workflows_test.rs
python-examples/01-agent-with-tools/: .env.example  README.md  agents.py  main.py  pyproject.toml  tools.py  worker.py
python-examples/19-exec-security/: .env.example  agents.py  main.py  pyproject.toml  worker.py
python-examples/19-exec-security/workspace/: greet.js  package-lock.json
python-examples/21-local-sandbox/: .env.example  agents.py  main.py  pyproject.toml  worker.py
python-examples/21-local-sandbox/workspace/: README.md
python-examples/22-approval-page/: .env.example  main.py  pyproject.toml  worker.py  workflows.py
python-examples/24-session-sandbox/: .env.example  agents.py  main.py  pyproject.toml
sdk/python/: BUILD.md  README.md  pyproject.toml
sdk/python/polos/: __init__.py  polos.py
sdk/python/polos/agents/: __init__.py  agent.py  conversation_history.py  stop_conditions.py  stream.py
sdk/python/polos/channels/: __init__.py  channel.py  slack.py
sdk/python/polos/core/: context.py  state.py  step.py  workflow.py
sdk/python/polos/execution/: __init__.py  docker.py  environment.py  local.py  output.py  sandbox.py  sandbox_manager.py  sandbox_tools.py  security.py  types.py
sdk/python/polos/execution/tools/: __init__.py  edit.py  exec.py  glob.py  grep.py  path_approval.py  read.py  write.py
sdk/python/polos/features/: events.py  schedules.py  tracing.py  wait.py
sdk/python/polos/llm/: __init__.py  generate.py  stream.py
sdk/python/polos/llm/providers/: __init__.py  anthropic.py  azure.py  base.py  fireworks.py  gemini.py  groq.py  litellm_provider.py  ollama.py  openai.py  together.py
sdk/python/polos/memory/: __init__.py  compaction.py  session_memory.py  tokens.py  types.py
sdk/python/polos/middleware/: guardrail.py  guardrail_executor.py  hook.py  hook_executor.py  hooks.py
sdk/python/polos/runtime/: batch.py  client.py  queue.py  worker.py  worker_server.py
sdk/python/polos/tools/: ask_user.py  tool.py  web_search.py
sdk/python/polos/types/: __init__.py  types.py
sdk/python/polos/utils/: __init__.py  agent.py  client_context.py  config.py  output_schema.py  retry.py  serializer.py  tracing.py  worker_singleton.py
sdk/python/tests/: __init__.py  conftest.py
sdk/python/tests/integration/: __init__.py  test_agent_execution.py  test_runtime_interactions.py  test_tool_execution.py  test_workflow_execution.py
sdk/python/tests/unit/test_agents/: test_agent.py  test_conversation_history.py  test_stop_conditions.py  test_stream.py
sdk/python/tests/unit/test_channels/: test_slack.py
sdk/python/tests/unit/test_core/: test_context.py  test_state.py  test_step.py  test_workflow.py
sdk/python/tests/unit/test_execution/: test_docker_environment.py  test_local_environment.py  test_output.py  test_sandbox.py  test_sandbox_manager.py  test_sandbox_tools.py  test_security.py
sdk/python/tests/unit/test_llm/: test_litellm_provider.py  test_providers_base.py  test_utils.py
sdk/python/tests/unit/test_memory/: test_compaction.py  test_tokens.py
sdk/python/tests/unit/test_middleware/: __init__.py  test_guardrail.py  test_hook.py
sdk/python/tests/unit/test_runtime/: __init__.py  test_client.py
sdk/python/tests/unit/test_tools/: test_ask_user.py  test_tool_approval.py  test_web_search.py
sdk/python/tests/unit/test_utils/: test_config.py  test_output_schema.py  test_retry.py  test_serializer.py
server/: .clippy.toml  .rustfmt.toml  BUILD.md  Cargo.toml  README.md  TESTING.md  build.rs
server/src/: client.rs  config.rs  main.rs  migrations.rs  utils.rs
server/src/commands/: agent.rs  dev.rs  execution_status.rs  invoke.rs  logs.rs  mod.rs  result.rs  run.rs  serve_ui.rs  start.rs  status.rs  stop.rs  suspend.rs  tool.rs  workflow.rs
server/src/init/: database.rs  mod.rs  seed.rs
server/src/services/: mod.rs  orchestrator.rs  ui.rs
(+505 files in other folders)
