[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "create-polos"
version = "0.1.0"
description = "Scaffold a new Polos agent project"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
create-polos = "create_polos.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/create_polos"]
