[project]
name = "polos-agent-with-tools"
version = "0.1.0"
description = "Simple agent using weather tool"
requires-python = ">=3.10"
dependencies = [
    "polos-sdk[openai]",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]
[tool.uv.sources]
polos-sdk = { path = "../../sdk/python" }
