[project]
name = "polos-exec-security"
version = "0.1.0"
description = "Exec security example -- allowlist + interactive terminal approval for sandbox commands"
requires-python = ">=3.10"
dependencies = [
    "polos-sdk[anthropic]",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]